fixed: rename btn inaccessible if name too long...
...with no whitespaces

fixes Nexus-Mods/Vortex#13323

--- a/style.scss
+++ b/style.scss
@@ -420,6 +420,7 @@ ul.collection-mods-page-attrib-tooltip {
       font-size: 1.175em;
       margin: 0.5em 0;
       font-weight: bold;
+      overflow: hidden;
     }
 
     .details {
